--- a/templates/Base.html
+++ b/templates/Base.html
@@ -34,7 +34,10 @@
 <body>  
   <nav class="navbar navbar-expand-lg custom-navbar navbar-light">
     <div class="container-fluid">
-      <img src="/static/logo.png" style="width: 4rem; height: 4rem;">
+      <a class="navbar-brand d-flex align-items-center" href="{{ url_for('home') }}">
+        <img src="/static/logo.png" style="width: 4rem; height: 4rem;" alt="Logo">
+        <span class="ms-2">FashionFootprint</span>
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
