adding in views box to home

--- a/templates/Base.html
+++ b/templates/Base.html
@@ -57,6 +57,15 @@
     </div>
   </nav>
 
+  <!-- Hardcoded Views Box -->
+  <div class="container mt-4">
+    <div class="card text-center" style="background-color: #808080;">
+      <div class="card-body">
+        <p class="fs-5 mb-0 text-white"><strong>Total Number of Views: 5</strong></p>
+      </div>
+    </div>
+  </div>
+
   {% block content %}
   {% endblock %}
 </body>
