--- a/templates/Base.html
+++ b/templates/Base.html
@@ -59,9 +59,9 @@
 
   <!-- Hardcoded Views Box -->
   <div class="container mt-4">
-    <div class="card text-center" style="background-color: #808080;">
+    <div class="card text-center" style="background-color: #8DE668;">
       <div class="card-body">
-        <p class="fs-5 mb-0 text-white"><strong>Total Number of Views: 5</strong></p>
+        <p class="fs-5 mb-0 text-white"><strong>Total Number of Views: 5,367,249</strong></p>
       </div>
     </div>
   </div>
