admin and font fix

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,4 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
 <h1>Admin Dashboard</h1>
+<p>Add Company</p>
+<form action="/admin_add_company" method="POST">
+
+</form>
+<p>Edit Company</p>
+<p>Add New Metrics</p>
 {% endblock %}
