--- a/templates/Base.html
+++ b/templates/Base.html
@@ -6,26 +6,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 <link rel="icon" type="image/png" href="/static/logo.png">
-<style>
-  .custom-navbar {
-    background-color: #2d6969; /* dark green background */
-  }
-  .custom-navbar .navbar-brand,
-  .custom-navbar .nav-link {
-    color: #ffffff; /* white text */
-  }
-  .custom-navbar .nav-link:hover {
-    color: #dddddd; /* slightly lighter on hover */
-  }
-  .custom-navbar .btn-outline-light {
-    border-color: #ffffff;
-    color: #ffffff;
-  }
-  .custom-navbar .btn-outline-light:hover {
-    background-color: #ffffff;
-    color: #2d6969;
-  }
-</style>
+<link rel="stylesheet" href="static/style.css">
 </head>
 
 <body>  
