--- a/templates/leaderboardDisplay.html
+++ b/templates/leaderboardDisplay.html
@@ -1,14 +1,23 @@
 {% extends 'base.html' %}
+
 {% block content %}
 
-<div class="leaderboard-card">
-    <h2>Leaderboard</h2>
-    <table>
-        {% for data in data %}
-        <p>{{data[0]}}</p>
-        <p>{{data[1]}}</p>
-        {% endfor %}
-    </table>
+<div class="container mt-4">
+    <div class="card mx-auto" style="max-width: 900px; border: 3px solid #2d6969; background-color: #8DE668;">
+        <div class="card-body">
+            <h2 class="text-center mb-4" style="color: black;">Leaderboard</h2>
+            
+            <div class="d-flex flex-column gap-2">
+                {% for item in data %}
+                <div class="d-flex justify-content-between align-items-center p-2" style="background-color: #ffffff; border: 2px solid #2d6969; border-radius: 5px;">
+                    <span style="color: black; font-weight: bold;">{{ item[0] }}</span>
+                    <span style="color: black;">{{ item[1] }}</span>
+                </div>
+                {% endfor %}
+            </div>
+
+        </div>
+    </div>
 </div>
 
 {% endblock %}
