--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 
 <!-- Welcome Message Text -->
 <div class="container mt-4 text-center" style="max-width: 800px; margin: 0 auto;">
-    <p class="mb-2 raleway" style="color: #2d6969;"><strong><b>Welcome to Fashion Footprint.</b></strong></p>
+    <p class="mb-2 raleway" style="color: #2d6969; font-size: 2.5rem;"><strong>Welcome to Fashion Footprint.</strong></p>
     <p class="raleway" style="color: #2d6969;">We provide independent, data-driven rankings of fashion brands based on <b>measurable sustainability</b> standards — from ethical sourcing and environmental <b>impact to durability and long-term value</b>. Our <b>mission is simple</b>: to empower consumers to <b>shop more responsibly</b> and <b>invest</b> in clothing designed to last.</p>
     <p class="raleway" style="color: #2d6969;"><b>Fashion Footprint</b> brings clarity, credibility, and accountability to sustainable fashion.</p>
 </div>
