views and stores homepage counter

--- a/static/style.css
+++ b/static/style.css
@@ -25,3 +25,33 @@
     background-color: #ffffff;
     color: #2d6969;
   }
+
+.wrapper {
+  width: 100%;
+  background-color: #8DE668;
+  display: inline-block;
+  overflow: hidden;
+}
+
+.marquee {
+  color: rgb(0, 0, 0);
+  font-size: 25px;
+  white-space: nowrap;
+  overflow: hidden;
+  display: flex;
+  animation: marquee 60s linear infinite;
+  
+}
+.marquee-content p {
+  display: inline-block;
+  margin-right: 50px;
+}
+
+@keyframes marquee {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
