--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,15 @@
 {% extends 'base.html' %}
 {% block content %}
-<!-- Hardcoded Views Box -->
-  <div class="container mt-4">
-    <div class="card text-center" style="background-color: #8DE668; border: 3px solid #2d6969;">
-      <div class="card-body">
-        <p class="fs-5 mb-0 raleway" style="color: black;"><strong>Total Number of Views: 567</strong></p>
-      </div>
-    </div>
+<div class="wrapper">
+  <div class="marquee">
+    <p>  • Total Number of Views: 567  </p>
+    <p>  • Total Number of Stores: {{count}}  </p>
+    <p>  • Total Number of Views: 567  </p>
+    <p>  • Total Number of Stores: {{count}}  </p>
+    <p>  • Total Number of Views: 567  </p>
+    <p>  • Total Number of Stores: {{count}}  </p>
   </div>
+</div>
 
   <!-- Welcome Message Box (Centered) -->
   <div class="container mt-4">
