--- a/templates/index.html
+++ b/templates/index.html
@@ -2,12 +2,16 @@
 {% block content %}
 <div class="wrapper">
   <div class="marquee">
+    <div class="marquee-content">
     <p>  • Total Number of Views: 567  </p>
     <p>  • Total Number of Stores: {{count}}  </p>
     <p>  • Total Number of Views: 567  </p>
     <p>  • Total Number of Stores: {{count}}  </p>
     <p>  • Total Number of Views: 567  </p>
     <p>  • Total Number of Stores: {{count}}  </p>
+    <p>  • Total Number of Views: 567  </p>
+    <p>  • Total Number of Stores: {{count}}  </p>
+    </div>
   </div>
 </div>
 
