--- a/templates/index.html
+++ b/templates/index.html
@@ -81,6 +81,9 @@
 .badge-water { 
     background-image: url('{{ url_for("static", filename="Water_impact_badge.png") }}'); 
 }
+.badge-materials {
+    background-image: url('{{ url_for("static", filename="Sustainable_Badge.png") }}'); 
+}
 
 /* Hover effects */
 .winner-card:hover {
