--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,5 +4,11 @@
 
 <p>{{ data1[0][1] }}</p>
 <p>{{ addy }}</p>
+<p>{{ data2[0][2] }}</p>
+<p>{{ data2[0][3] }}</p>
+<p>{{ data2[0][4] }}</p>
+<p>{{ data2[0][5] }}</p>
+<p>{{ data2[0][6] }}</p>
+<p>{{ data2[0][7] }}</p>
 
 {% endblock %}
