--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,22 @@
             <p>| Total Number of Stores: {{ count }}</p>
             <p>| Total Number of Views: 567</p>
             <p>| Total Number of Stores: {{ count }}</p>
+            <p>| Total Number of Views: 567</p>
+            <p>| Total Number of Stores: {{ count }}</p>
+            <p>| Total Number of Views: 567</p>
+            <p>| Total Number of Stores: {{ count }}</p>
+            <p>| Total Number of Views: 567</p>
+            <p>| Total Number of Stores: {{ count }}</p>
+            <p>| Total Number of Views: 567</p>
+            <p>| Total Number of Stores: {{ count }}</p>
+            <p>| Total Number of Views: 567</p>
+            <p>| Total Number of Stores: {{ count }}</p>
+            <p>| Total Number of Views: 567</p>
+            <p>| Total Number of Stores: {{ count }}</p>
+            <p>| Total Number of Views: 567</p>
+            <p>| Total Number of Stores: {{ count }}</p>
+            <p>| Total Number of Views: 567</p>
+            <p>| Total Number of Stores: {{ count }}</p>
         </div>
     </div>
 </div>
